{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 11,
  "lineage": "dfea3a7b-0c01-f7d5-e5a3-4a1bdbbf2b18",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My_VPC_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995211071693:internet-gateway/igw-0d20b3c6ff8a5b7ad",
            "id": "igw-0d20b3c6ff8a5b7ad",
            "owner_id": "995211071693",
            "tags": {
              "Name": "My VPC Internet Gateway"
            },
            "vpc_id": "vpc-0deafc0bec9075426"
          },
          "dependencies": [
            "module.instances.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "My_VPC_Security_ACL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995211071693:network-acl/acl-06859727e12e0920b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "id": "acl-06859727e12e0920b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "995211071693",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0e59ccb014998ea4a"
            ],
            "tags": {
              "Name": "My VPC ACL"
            },
            "vpc_id": "vpc-0deafc0bec9075426"
          },
          "dependencies": [
            "module.instances.aws_subnet.My_VPC_Subnet",
            "module.instances.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_route",
      "name": "My_VPC_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d20b3c6ff8a5b7ad",
            "id": "r-rtb-0fc5426707f30fe981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc5426707f30fe98",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.instances.aws_internet_gateway.My_VPC_GW",
            "module.instances.aws_route_table.My_VPC_route_table",
            "module.instances.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My_VPC_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fc5426707f30fe98",
            "owner_id": "995211071693",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d20b3c6ff8a5b7ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My VPC Route Table"
            },
            "vpc_id": "vpc-0deafc0bec9075426"
          },
          "dependencies": [
            "module.instances.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8b215d92a0f548a",
            "route_table_id": "rtb-0fc5426707f30fe98",
            "subnet_id": "subnet-0e59ccb014998ea4a"
          },
          "dependencies": [
            "module.instances.aws_route_table.My_VPC_route_table",
            "module.instances.aws_subnet.My_VPC_Subnet",
            "module.instances.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995211071693:security-group/sg-09b53ba5a067538ea",
            "description": "My VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b53ba5a067538ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "My VPC Security Group",
            "name_prefix": null,
            "owner_id": "995211071693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "My VPC Security Group",
              "Name": "My VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deafc0bec9075426"
          },
          "dependencies": [
            "module.instances.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My_VPC_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995211071693:subnet/subnet-0e59ccb014998ea4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e59ccb014998ea4a",
            "map_public_ip_on_launch": true,
            "owner_id": "995211071693",
            "tags": {
              "Name": "My VPC Subnet"
            },
            "vpc_id": "vpc-0deafc0bec9075426"
          },
          "dependencies": [
            "module.instances.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:995211071693:vpc/vpc-0deafc0bec9075426",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3f80b322ea7d57e",
            "default_route_table_id": "rtb-0f70b17d48b2957a0",
            "default_security_group_id": "sg-0708e31a735f5172d",
            "dhcp_options_id": "dopt-b3f24ad8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0deafc0bec9075426",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f70b17d48b2957a0",
            "owner_id": "995211071693",
            "tags": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}